force-app/main/default/objects/OutboundNotificationEvent__e/OutboundNotificationEvent__e.object-meta.xml
<CustomObject>
    <description>Platform event notifying subscribers that there was an integration transaction required as indicated by the Centuri_Outbound_Notification__c object. This object provides an object name and record id allowing the subscriber to retrieve the data and integrate it to external system(s)</description>
    <label>OutboundNotificationEvent</label>
    <pluralLabel>OutboundNotificationEvents</pluralLabel>
</CustomObject>