force-app/main/default/objects/OutboundNotificationEvent__e/fields/externalRefId__c.field-meta.xml
<CustomField>
    <fullName>externalRefId__c</fullName>
    <label>externalRefId</label>
    <length>64</length>
    <type>Text</type>
</CustomField>