force-app/main/default/objects/OutboundNotificationEvent__e/fields/externalRefIdFieldName__c.field-meta.xml
<CustomField>
    <fullName>externalRefIdFieldName__c</fullName>
    <label>externalRefIdFieldName</label>
    <length>64</length>
    <type>Text</type>
</CustomField>