force-app/main/default/objects/OutboundNotificationEvent__e/fields/objectName__c.field-meta.xml
<CustomField>
    <fullName>objectName__c</fullName>
    <label>objectName</label>
    <length>64</length>
    <type>Text</type>
</CustomField>