force-app/main/default/objects/OutboundNotificationEvent__e/fields/outboundNotificationId__c.field-meta.xml
<CustomField>
    <fullName>outboundNotificationId__c</fullName>
    <label>outboundNotificationId</label>
    <length>64</length>
    <type>Text</type>
</CustomField>