force-app/main/default/objects/OutboundNotificationEvent__e/fields/recordId__c.field-meta.xml
<CustomField>
    <fullName>recordId__c</fullName>
    <label>recordId</label>
    <length>64</length>
    <type>Text</type>
</CustomField>